--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "edge": "7.10.1"
+    "edge-js": "^18.4.2"
   },
   "directories": {
     "lib": "lib"
